--- a/templates/itemView.html
+++ b/templates/itemView.html
@@ -1,156 +1,159 @@
-<div class="container">
-    <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
-        <md-card-title>
-            <md-card-title-text>
-                <span class="md-headline">{{single.name}}</span>
-            </md-card-title-text>
-        </md-card-title>
-        <md-card-content layout-gt-xs="row">
-            <div class="md-media-xl card-media" flex="40">
-                <img ng-src="{{single.photo}}"
-                     style="width: 250px; height: auto"/>
-            </div>
-            <div layout="column" flex="100" flex-gt-sm="60" layout-align="start start">
-                <div style="font-size: 30px; font-weight: 200; margin-top: 0px; margin-bottom: 25px">The best offer in:
-                    {{cheapest.storeName}}
+<div layout="row" layout-align="center start">
+    <div flex="100" flex-gt-xs="85" flex-gt-md="70">
+        <md-card md-theme="{{ showDarkTheme ? 'dark-orange' : 'default' }}" md-theme-watch>
+            <md-card-title>
+                <md-card-title-text>
+                    <span class="md-headline">{{single.name}}</span>
+                </md-card-title-text>
+            </md-card-title>
+            <md-card-content layout-gt-xs="row">
+                <div class="md-media-xl card-media" flex="40">
+                    <img ng-src="{{single.photo}}"
+                         style="width: 250px; height: auto"/>
                 </div>
-                <div style="font-size: 30px; font-weight: 400; margin-top: 0px">
-                    {{cheapest.itemPrice | currency}}
-                    <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
+                <div layout="column" flex="100" flex-gt-sm="60" layout-align="start start">
+                    <div style="font-size: 30px; font-weight: 200; margin-top: 0px; margin-bottom: 25px">The best offer
+                        in:
+                        {{cheapest.storeName}}
+                    </div>
+                    <div style="font-size: 30px; font-weight: 400; margin-top: 0px">
+                        {{cheapest.itemPrice | currency}}
+                        <md-button class="md-primary md-raised" ng-click="">BUY NOW</md-button>
+                    </div>
+                    <div>
+                        Rating: {{single.avgRating}}, Reviews: {{single.noOfReviews}}.{{data.selected}}
+                    </div>
                 </div>
-                <div>
-                    Rating: {{single.avgRating}}, Reviews: {{single.noOfReviews}}.{{data.selected}}
-                </div>
-            </div>
 
-        </md-card-content>
-        <md-card-actions layout="row" layout-align="end center">
-        </md-card-actions>
-    </md-card>
+            </md-card-content>
+            <md-card-actions layout="row" layout-align="end center">
+            </md-card-actions>
+        </md-card>
 
-    <md-content>
-        <md-tabs md-dynamic-height md-border-bottom md-selected="tab.selected">
-            <md-tab label="Offers">
-                <md-content class="md-padding">
-                    <h1 class="md-display-2 form-header">Offers</h1>
-                    <md-list flex>
-                        <md-list-item class="md-3-line" ng-repeat="offer in offers">
-                            <div class="md-avatar" style="background-color: #B2DFDB" layout="row"
-                                 layout-align="center center">
-                                <div>{{offer.storeName | capitalizeFirst}}</div>
-                            </div>
-                            <div class="md-list-item-text" layout="row" layout-xs="column">
-                                <div layout="column" flex-gt-xs="33" flex>
-                                    <div style="font-size: 25px">
-                                        {{offer.storeName}}
+        <md-content>
+            <md-tabs md-dynamic-height md-border-bottom md-selected="tab.selected">
+                <md-tab label="Offers">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-2 form-header">Offers</h1>
+                        <md-list flex>
+                            <md-list-item class="md-3-line" ng-repeat="offer in offers">
+                                <div class="md-avatar" style="background-color: #B2DFDB" layout="row"
+                                     layout-align="center center">
+                                    <div>{{offer.storeName | capitalizeFirst}}</div>
+                                </div>
+                                <div class="md-list-item-text" layout="row" layout-xs="column">
+                                    <div layout="column" flex-gt-xs="33" flex>
+                                        <div style="font-size: 25px">
+                                            {{offer.storeName}}
+                                        </div>
+                                        <div style="font-size: 15px">
+                                            {{offer.storeCountry}}, {{offer.storeCity}}
+                                        </div>
                                     </div>
-                                    <div style="font-size: 15px">
-                                        {{offer.storeCountry}}, {{offer.storeCity}}
+                                    <div flex-gt-xs="33" flex style="font-size: 35px">
+                                        {{offer.itemPrice | currency}}
                                     </div>
-                                </div>
-                                <div flex-gt-xs="33" flex style="font-size: 35px">
-                                    {{offer.itemPrice | currency}}
-                                </div>
-                                <div flex-gt-xs="20" flex>
-                                    <md-button class="md-primary md-raised">BUY NOW</md-button>
-                                </div>
-                                <div flex-gt-xs="14" flex style="height: 15px"></div>
+                                    <div flex-gt-xs="20" flex>
+                                        <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                    </div>
+                                    <div flex-gt-xs="14" flex style="height: 15px"></div>
 
-                            </div>
-                            <md-divider></md-divider>
-                        </md-list-item>
-                    </md-list>
-                </md-content>
-            </md-tab>
-            <md-tab label="About this product">
-                <md-content class="md-padding">
-                    <h1 class="md-display-2 form-header">About this product</h1>
-                    <p>
-                        {{single.description}}
-                    </p>
-                </md-content>
-            </md-tab>
-            <md-tab label="Reviews">
-                <md-content class="md-padding">
-                    <h1 class="md-display-2 form-header">Reviews</h1>
-                    <md-list flex>
-                        <md-list-item class="md-3-line" ng-repeat="review in reviews">
-                            <div class="md-avatar" style="background-color: #B2DFDB" layout="row"
-                                 layout-align="center center">
-                                <div>{{$index + 1}}</div>
-                            </div>
-                            <div class="md-list-item-text" layout="row" layout-xs="column">
-                                <div layout="column" flex-gt-xs="33" flex>
-                                    <div style="font-size: 25px">
-                                        Rating: {{review.rating}}
+                                </div>
+                                <md-divider></md-divider>
+                            </md-list-item>
+                        </md-list>
+                    </md-content>
+                </md-tab>
+                <md-tab label="About this product">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-2 form-header">About this product</h1>
+                        <p>
+                            {{single.description}}
+                        </p>
+                    </md-content>
+                </md-tab>
+                <md-tab label="Reviews">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-2 form-header">Reviews</h1>
+                        <md-list flex>
+                            <md-list-item class="md-3-line" ng-repeat="review in reviews">
+                                <div class="md-avatar" style="background-color: #B2DFDB" layout="row"
+                                     layout-align="center center">
+                                    <div>{{$index + 1}}</div>
+                                </div>
+                                <div class="md-list-item-text" layout="row" layout-xs="column">
+                                    <div layout="column" flex-gt-xs="33" flex>
+                                        <div style="font-size: 25px">
+                                            Rating: {{review.rating}}
+                                            <md-icon style="font-size: 25px; padding-bottom: 5px">star</md-icon>
+
+                                        </div>
+                                        <div style="font-size: 15px; width: 100%">
+                                            {{review.description}}
+                                        </div>
+                                    </div>
+                                    <div flex-gt-xs="33" flex style="font-size: 35px">
+
+                                    </div>
+                                    <div flex-gt-xs="20" flex>
+
+                                    </div>
+                                    <div flex-gt-xs="14" flex style="height: 15px"></div>
+
+                                </div>
+                                <md-divider></md-divider>
+                            </md-list-item>
+                        </md-list>
+                    </md-content>
+                </md-tab>
+                <md-tab label="Add Review">
+                    <md-content class="md-padding" layout="column">
+                        <h1 class="md-display-2 form-header">Add review</h1>
+                        <div layout="row" layout-align="center">
+                            <div flex="100" flex-gt-sm="80" flex-gt-md="70">
+                                <md-content layout-padding="">
+                                    <md-input-container class="input-add-item" flex="">
+                                        <label>Description</label>
+                                        <textarea ng-model="newReview.description" md-maxlength="500" columns="5"
+                                                  md-select-on-focus></textarea>
+                                    </md-input-container>
+                                </md-content>
+
+                                <div>
+                                    <h4 class="header-sm">Rating: {{newReview.rating}}
                                         <md-icon style="font-size: 25px; padding-bottom: 5px">star</md-icon>
-
-                                    </div>
-                                    <div style="font-size: 15px; width: 100%">
-                                        {{review.description}}
-                                    </div>
+                                    </h4>
+                                    <fieldset class="rating">
+                                        <input type="radio" id="star5" name="rating" ng-model="chosen" ng-value="5"
+                                               ng-click="setValue(chosen); chosen=0"/><label class="full" for="star5"
+                                                                                             title="Awesome - 5 stars"></label>
+                                        <input type="radio" id="star4" name="rating" ng-model="chosen" ng-value="4"
+                                               ng-click="setValue(chosen); chosen=0"/><label class="full" for="star4"
+                                                                                             title="Pretty good - 4 stars"></label>
+                                        <input type="radio" id="star3" name="rating" ng-model="chosen" ng-value="3"
+                                               ng-click="setValue(chosen); chosen=0"/><label class="full" for="star3"
+                                                                                             title="Meh - 3 stars"></label>
+                                        <input type="radio" id="star2" name="rating" ng-model="chosen" ng-value="2"
+                                               ng-click="setValue(chosen); chosen=0"/><label class="full" for="star2"
+                                                                                             title="Kinda bad - 2 stars"></label>
+                                        <input type="radio" id="star1" name="rating" ng-model="chosen" ng-value="1"
+                                               ng-click="setValue(chosen); chosen=0"/><label class="full" for="star1"
+                                                                                             title="Sucks big time - 1 star"></label>
+                                    </fieldset>
                                 </div>
-                                <div flex-gt-xs="33" flex style="font-size: 35px">
-
+                                <div layout="row" layout-align="end center">
+                                    <md-button class="md-primary md-raised" ng-click="showConfirm($event)">Add
+                                        <md-icon>send</md-icon>
+                                    </md-button>
                                 </div>
-                                <div flex-gt-xs="20" flex>
-
-                                </div>
-                                <div flex-gt-xs="14" flex style="height: 15px"></div>
-
                             </div>
-                            <md-divider></md-divider>
-                        </md-list-item>
-                    </md-list>
-                </md-content>
-            </md-tab>
-            <md-tab label="Add Review">
-                <md-content class="md-padding" layout="column">
-                    <h1 class="md-display-2 form-header">Add review</h1>
-                    <div layout="row" layout-align="center">
-                        <div flex="100" flex-gt-sm="80" flex-gt-md="70">
-                            <md-content layout-padding="">
-                                <md-input-container class="input-add-item" flex="">
-                                    <label>Description</label>
-                                    <textarea ng-model="newReview.description" md-maxlength="500" columns="5"
-                                              md-select-on-focus></textarea>
-                                </md-input-container>
-                            </md-content>
 
-                            <div>
-                                <h4 class="header-sm">Rating: {{newReview.rating}}
-                                    <md-icon style="font-size: 25px; padding-bottom: 5px">star</md-icon>
-                                </h4>
-                                <fieldset class="rating">
-                                    <input type="radio" id="star5" name="rating" ng-model="chosen" ng-value="5"
-                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star5"
-                                                                                         title="Awesome - 5 stars"></label>
-                                    <input type="radio" id="star4" name="rating" ng-model="chosen" ng-value="4"
-                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star4"
-                                                                                         title="Pretty good - 4 stars"></label>
-                                    <input type="radio" id="star3" name="rating" ng-model="chosen" ng-value="3"
-                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star3"
-                                                                                         title="Meh - 3 stars"></label>
-                                    <input type="radio" id="star2" name="rating" ng-model="chosen" ng-value="2"
-                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star2"
-                                                                                         title="Kinda bad - 2 stars"></label>
-                                    <input type="radio" id="star1" name="rating" ng-model="chosen" ng-value="1"
-                                           ng-click="setValue(chosen); chosen=0"/><label class="full" for="star1"
-                                                                                         title="Sucks big time - 1 star"></label>
-                                </fieldset>
-                            </div>
-                            <div layout="row" layout-align="end center">
-                                <md-button class="md-primary md-raised" ng-click="showConfirm($event)">Add
-                                    <md-icon>send</md-icon>
-                                </md-button>
-                            </div>
                         </div>
 
-                    </div>
 
-
-                </md-content>
-            </md-tab>
-        </md-tabs>
-    </md-content>
+                    </md-content>
+                </md-tab>
+            </md-tabs>
+        </md-content>
+    </div>
 </div>
