--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -1,127 +1,128 @@
-<div class="container">
-    <div layout="row">
+<div layout="row" layout-align="center start">
+    <div flex="100" flex-gt-xs="85" flex-gt-md="70">
+        <div layout="row">
 
-        <div layout="column">
-            <md-sidenav flex="100"
-                        style="height:100%; min-width: 250px; width: 250px; padding-top: 10px; margin-bottom: 8px; margin-top: 0;"
-                        class="md-sidenav-left"
-                        md-component-id="left"
-                        md-is-locked-open="$mdMedia('gt-md')"
-                        md-whiteframe="4">
+            <div layout="column">
+                <md-sidenav flex="100"
+                            style="height:100%; min-width: 250px; width: 250px; padding-top: 10px; margin-bottom: 8px; margin-top: 0;"
+                            class="md-sidenav-left"
+                            md-component-id="left"
+                            md-is-locked-open="$mdMedia('gt-md')"
+                            md-whiteframe="4">
 
-                <md-content flex="100" layout-padding ng-controller="LeftCtrl" style="padding: 0">
-                    <md-button ng-click="close()" class="md-primary" hide-gt-md>
-                        Close Sidenav Left
-                    </md-button>
-                    <a href="/#/" class="md-button md-ink-ripple side-nav-element">
-                        <md-icon>home</md-icon>
-                        Home page
-                    </a>
-                    <md-button ng-click="getStore()">get Store</md-button>
-                    <p>
-                        Feel free to add some products to our database
-                    </p>
-                </md-content>
-
-            </md-sidenav>
-        </div>
-
-
-        <!-- container -->
-        <div flex="" style="width: 100%;">
-
-            <div ng-repeat="item in store.items">
-                <a ng-href="/#/item/{{item.id}}">
-                    <md-card layout-padding ng-click="consoletest2()"
-                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; height: 202px"
-                             md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                             ng-mouseleave="height = 3">
-                        <div layout="row">
-                            <div flex="33" flex-gt-md="25">
-                                <img ng-src="{{item.photo}}?{{$index}}"
-                                     style="height: 180px; width: auto" alt="{{item.photo}}"/>
-                            </div>
-                            <div flex="66" flex-gt-md="50" layout="column">
-                                <div flex="25" class="header-sm">{{item.name}}</div>
-                                <div flex="25">
-                                    <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
-                                    <md-icon style="margin: auto; font-size: 20px">star</md-icon>
-                                    <span style="font-size: 20px; font-weight: 200">{{item.noOfReviews}} Reviews</span>
-                                </div>
-                                <div flex="25">Category: {{item.category}}</div>
-                                <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
-                            </div>
-                            <div flex="25" layout="column" class="price" style="color: #009688">
-                                {{item.price | currency}}
-                                <md-button class="md-primary md-raised">BUY NOW</md-button>
-                            </div>
-                        </div>
-                    </md-card>
-                </a>
-            </div>
-        </div>
-
-
-        <!--<section layout="row">
-
-            <md-content>
-
-                <md-card md-theme-watch flex="100">
-                    <md-card-title>
-                        <md-card-title-text>
-                            <span class="md-headline">{{store.name}}</span>
-                            <span class="md-subhead">{{store.city}}, {{store.street}}, {{store.number}}</span>
-                        </md-card-title-text>
-                        <md-card-title-media>
-                            <div class="md-media-lg card-media">
-                            </div>
-                        </md-card-title-media>
-                    </md-card-title>
-                    <md-card-actions layout="row" layout-align="end center">
-                        <md-button ng-click="getStore()">Action 1</md-button>
-                        <md-button>Action 2</md-button>
-                    </md-card-actions>
-                </md-card>
-
-                <md-list flex>
-                    <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
-                    <md-list-item class="md-3-line" ng-repeat="item in store.items">
-                        <a ng-href="/#/item/{{item.id}}">
-                            <div class="md-list-item-text" layout="column" style="overflow: visible">
-                                <md-card ng-click="consoletest2()"
-                                         style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%"
-                                         md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
-                                         ng-mouseleave="height = 3">
-                                    <md-card-title>
-                                        <md-card-title-text>
-                                            <span class="md-headline">{{item.name}}</span>
-                                            <span class="md-subhead">{{item.price | currency: "$"}}</span>
-                                        </md-card-title-text>
-                                    </md-card-title>
-                                    <md-card-content layout="row" layout-align="space-between">
-                                        <div class="md-media-xl card-media">
-                                            <img ng-src="{{item.photo}}?{{$index}}"
-                                                 style="width: 200px; height: auto" alt="{{item.photo}}"/>
-                                        </div>
-                                        <p style="margin-left: 25px">{{item.description}}</p>
-
-                                    </md-card-content>
-                                    <md-card-actions layout="row" layout-align="end center">
-                                        <p style="margin-right: 10px">views: {{item.views}}</p>
-                                        <p>id: {{item.id}}</p>
-                                        <md-button ng-click="viewUp(item.id)">View Up</md-button>
-                                        <md-button>Action 2</md-button>
-                                    </md-card-actions>
-                                </md-card>
-                            </div>
+                    <md-content flex="100" layout-padding ng-controller="LeftCtrl" style="padding: 0">
+                        <md-button ng-click="close()" class="md-primary" hide-gt-md>
+                            Close Sidenav Left
+                        </md-button>
+                        <a href="/#/" class="md-button md-ink-ripple side-nav-element">
+                            <md-icon>home</md-icon>
+                            Home page
                         </a>
-                    </md-list-item>
-                </md-list>
-            </md-content>
-        </section>
+                        <md-button ng-click="getStore()">get Store</md-button>
+                        <p>
+                            Feel free to add some products to our database
+                        </p>
+                    </md-content>
+
+                </md-sidenav>
+            </div>
 
 
--->
+            <!-- container -->
+            <div flex="" style="width: 100%;">
 
+                <div ng-repeat="item in store.items">
+                    <a ng-href="/#/item/{{item.id}}">
+                        <md-card layout-padding ng-click="consoletest2()"
+                                 style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; height: 202px"
+                                 md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
+                                 ng-mouseleave="height = 3">
+                            <div layout="row">
+                                <div flex="33" flex-gt-md="25">
+                                    <img ng-src="{{item.photo}}?{{$index}}"
+                                         style="height: 180px; width: auto" alt="{{item.photo}}"/>
+                                </div>
+                                <div flex="66" flex-gt-md="50" layout="column">
+                                    <div flex="25" class="header-sm">{{item.name}}</div>
+                                    <div flex="25">
+                                        <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
+                                        <md-icon style="margin: auto; font-size: 20px">star</md-icon>
+                                        <span style="font-size: 20px; font-weight: 200">{{item.noOfReviews}} Reviews</span>
+                                    </div>
+                                    <div flex="25">Category: {{item.category}}</div>
+                                    <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
+                                </div>
+                                <div flex="25" layout="column" class="price" style="color: #009688">
+                                    {{item.price | currency}}
+                                    <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                </div>
+                            </div>
+                        </md-card>
+                    </a>
+                </div>
+            </div>
+
+
+            <!--<section layout="row">
+
+                <md-content>
+
+                    <md-card md-theme-watch flex="100">
+                        <md-card-title>
+                            <md-card-title-text>
+                                <span class="md-headline">{{store.name}}</span>
+                                <span class="md-subhead">{{store.city}}, {{store.street}}, {{store.number}}</span>
+                            </md-card-title-text>
+                            <md-card-title-media>
+                                <div class="md-media-lg card-media">
+                                </div>
+                            </md-card-title-media>
+                        </md-card-title>
+                        <md-card-actions layout="row" layout-align="end center">
+                            <md-button ng-click="getStore()">Action 1</md-button>
+                            <md-button>Action 2</md-button>
+                        </md-card-actions>
+                    </md-card>
+
+                    <md-list flex>
+                        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
+                        <md-list-item class="md-3-line" ng-repeat="item in store.items">
+                            <a ng-href="/#/item/{{item.id}}">
+                                <div class="md-list-item-text" layout="column" style="overflow: visible">
+                                    <md-card ng-click="consoletest2()"
+                                             style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%"
+                                             md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
+                                             ng-mouseleave="height = 3">
+                                        <md-card-title>
+                                            <md-card-title-text>
+                                                <span class="md-headline">{{item.name}}</span>
+                                                <span class="md-subhead">{{item.price | currency: "$"}}</span>
+                                            </md-card-title-text>
+                                        </md-card-title>
+                                        <md-card-content layout="row" layout-align="space-between">
+                                            <div class="md-media-xl card-media">
+                                                <img ng-src="{{item.photo}}?{{$index}}"
+                                                     style="width: 200px; height: auto" alt="{{item.photo}}"/>
+                                            </div>
+                                            <p style="margin-left: 25px">{{item.description}}</p>
+
+                                        </md-card-content>
+                                        <md-card-actions layout="row" layout-align="end center">
+                                            <p style="margin-right: 10px">views: {{item.views}}</p>
+                                            <p>id: {{item.id}}</p>
+                                            <md-button ng-click="viewUp(item.id)">View Up</md-button>
+                                            <md-button>Action 2</md-button>
+                                        </md-card-actions>
+                                    </md-card>
+                                </div>
+                            </a>
+                        </md-list-item>
+                    </md-list>
+                </md-content>
+            </section>
+
+
+    -->
+        </div>
     </div>
 </div>
