--- a/templates/itemSearch.html
+++ b/templates/itemSearch.html
@@ -34,25 +34,32 @@
                     <a ng-href="/#/item/{{item.id}}">
                         <div style="padding-left: 8px; padding-right: 8px; padding-top: 8px">
                             <md-card ng-click="consoletest2()"
-                                     style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; height: 202px; margin: 0"
+                                     style="outline: none; border: 0; cursor: pointer; overflow: visible; min-width: 100%; margin: 0"
                                      md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
                                      ng-mouseleave="height = 3">
                                 <div layout="row">
-                                    <div flex="33" flex-gt-md="25">
-                                        <img ng-src="{{item.photo}}?{{$index}}"
-                                             style="height: 180px; width: auto" alt="{{item.photo}}"/>
+                                    <div flex="33" flex-gt-md="25" layout-align="center center" style="padding: 20px;">
+                                        <div style="height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center" ng-style="{'background-image':'url({{item.photo}})'}">
+
+                                        </div>
                                     </div>
-                                    <div flex="66" flex-gt-md="50" layout="column">
-                                        <div flex="25" class="header-sm">{{item.name}}</div>
-                                        <div flex="25">
+                                    <div flex="66" flex-gt-md="50" layout="column" style="padding-left: 25px">
+                                        <div flex="" class="header-sm">{{item.name}}</div>
+                                        <div flex="">
                                             <span style="font-size: 20px; font-weight: 200">{{item.avgRating}}</span>
                                             <md-icon style="margin: auto; font-size: 20px">star</md-icon>
                                             <span style="font-size: 20px; font-weight: 200">{{item.noOfReviews}} Reviews</span>
                                         </div>
-                                        <div flex="25">Category: {{item.category}}</div>
+                                        <div flex="" hide show-gt-md>Category: {{item.category}}</div>
+                                        <div flex="" hide-gt-md class="price" style="color: #009688">
+                                            {{item.price | currency}}
+                                        </div>
+                                        <div flex="" hide-gt-md>
+                                            <md-button class="md-primary md-raised">BUY NOW</md-button>
+                                        </div>
                                         <div flex hide show-gt-md>{{item.description | firstSentence}}</div>
                                     </div>
-                                    <div flex="25" layout="column" class="price" style="color: #009688">
+                                    <div flex="25" hide show-gt-md class="price" style="color: #009688">
                                         {{item.price | currency}}
                                         <md-button class="md-primary md-raised">BUY NOW</md-button>
                                     </div>
