--- a/templates/itemsInStore.html
+++ b/templates/itemsInStore.html
@@ -36,7 +36,7 @@
                                      md-whiteframe="{{height}}" ng-init="height = 3" ng-mouseenter="height = 12"
                                      ng-mouseleave="height = 3">
                                 <div layout="row">
-                                    <div flex="33" flex-gt-md="25" layout-align="center center">
+                                    <div flex="33" flex-gt-md="25" layout-align="center center" style="padding: 20px">
                                         <div style="height: 200px; background-size: contain; background-repeat: no-repeat; background-position: center" ng-style="{'background-image':'url({{item.photo}})'}">
 
                                         </div>
